--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -17,12 +17,8 @@
 	<main>
 		<h2>Instructions</h2>
 			<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
-		<div>
-			<img src="images/back.png" alt="Queen of Diamonds">
-			<img src="images/back.png" alt="Queen of Hearts">
-			<img src="images/back.png" alt="King of Diamonds">
-			<img src="images/back.png" alt="King of Hearts">
-		</div>
+		<div id="game-board" class="board clearfix"></div>
+	<button>Reset</button>
 	</main>
 		<h3>Its a challenging game that will test your abilites and keep you on your toes. An amazingly fun game that will improve cognitive responses and short term memory. A game for people of all ages.</h3>
 	<footer class= "clearfix">
